Kubernetes config/UserService/stage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: mohitcse/microservices:user_service-v1.1
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu: "500m"
      imagePullSecrets:
        - name: regcred #docker registery secret

---
kind: Ingress
metadata:
  namespace: stage
  name: user-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: user-service-stage.mohit
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8081
